--- a/jquery/04mouseEvent/event_03.html
+++ b/jquery/04mouseEvent/event_03.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>sample</title>
 <link rel="stylesheet" href="css/style.css">
-
+<script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <!--큰이미지-->
@@ -30,5 +30,8 @@
 <img src="pic/flw_05.jpg" width="175px" ></a></li>
 </ul></div></div>
 </div>
+<script>
+  $(function(){});
+</script>
 </body>
 </html>
