--- a/jquery/05effect/effect_04.html
+++ b/jquery/05effect/effect_04.html
@@ -7,15 +7,13 @@
 p{width:150px; height:150px; background:red;
 	position:absolute; top:100px; left:100px;}
 </style>
-<script src="../js/jquery-1.11.3.min.js"></script>
-<script src="../js/jquery-migrate-1.2.1.min.js"></script>
-<script src="../js/jquery-ui.min.js"></script>
+
 </head> 
 
 <body>
 <button id="btn">go</button>
 <button id="btn01">300go</button>
-<button id="btn02">color</button>
+<!-- <button id="btn02">color</button> -->
 <p></p>
 
 
