--- a/jquery/03dom/dom_03.html
+++ b/jquery/03dom/dom_03.html
@@ -1,31 +1,32 @@
 ﻿<!doctype html>
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <title>속성변화</title>
-
-
-
-    <script src="../js/jquery-3.6.0.min.js"></script>
+<meta charset="UTF-8">
+<title>속성변화</title>
+<script src="../js/jquery-3.6.0.min.js"></script>
 </head>
-
 <body>
-    <button id="btn01">버튼</button>
-    <p> 텍스트 텍스트 텍스트 텍스트 텍스트 </p>
-
-    <script>
-        $(function(){
-            $('#btn01').click(function(){
-                $('p').css({
-                    fontSize:'35px',
-                    color:'pink',
-                    backgroundColor:'green',
-                    fontWeight:'bold'
-                });
-            });
-        })
-    </script>
+<button id="btn01">버튼</button>
+<p> 텍스트 텍스트 텍스트 텍스트 텍스트 </p>
+<script>
+  $(function(){
+    $('#btn01').click(function(e){
+      $('p').css(
+        // {
+        //  'font-size':'35px',
+        //   'color':'pink',
+        //   'background-color':'green',
+        //   'font-weight':'bold'
+        // }
+        {
+          fontSize:'35px',
+          color:'pink',
+          backgroundColor:'green',
+          fontWeight:'bold'
+        }
+        );
+    });
+  });
+</script>
 </body>
-
 </html>
