--- a/jquery/03dom/dom_05.html
+++ b/jquery/03dom/dom_05.html
@@ -16,7 +16,6 @@
 			display: none;
 		}
 	</style>
-
 	<script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 
@@ -24,29 +23,28 @@
 	<section>
 		<p class="btn">
 			<button id="btn01">이미지 가져오기</button>
-			<button id="btn02">링크 변경하기</button>
-		</p>
+			<button id="btn02">링크 변경하기</button></p>
 		<p class="box01">
-			<img src="images/img01.png" alt="sample">
-		</p>
+			<img src="images/img01.png" alt="sample"></p>
 		<p class="box02"><a href="http://www.naver.com">다음으로 변경하기</a></p>
 
 		<div>
-			<img src="images/img02.png" alt="sample">
-		</div>
+			<img src="images/img02.png" alt="sample1"></div>
 	</section>
-
 	<script>
-		$(function(){
-			$('#btn01').click(function(){
-				let pic = $('div>img').attr("src");
-				$('.box01>img').attr("src", pic);
+		$(function () {
+			$('#btn01').click(function (e) {
+				//  속성의 값 가져오기
+				let str = $('div>img').attr('src');
+				console.log(str);
+				$('.box01>img').attr('src', str);
+			});
+			// 
+			$('#btn02').click(function (e) {
+				$('.box02>a').attr('href', 'http://www.daum.net')
+					.text('다음사이트');
 			});
 
-			$('#btn02').click(function(){
-				let a = 'https://google.com/';
-				$('.box02>a').attr('href', a).text('구글사이트');
-			});
 		});
 	</script>
 </body>
