--- a/jquery/03dom/dom_06.html
+++ b/jquery/03dom/dom_06.html
@@ -1,46 +1,32 @@
 <!doctype html>
 <html>
-
 <head>
-	<meta charset="UTF-8">
-	<title>속성변화</title>
-	<style>
-		section {
-			width: 500px;
-			margin: 25px auto;
-			text-align: center;
-		}
-
-		div {
-			display: none;
-		}
-	</style>
-
-	<script src="../js/jquery-3.6.0.min.js"></script>
+<meta charset="UTF-8">
+<title>속성변화</title>
+<style>
+section{width:500px; margin:25px auto; text-align:center;}
+div{display:none;}
+</style>
 </head>
-
 <body>
-	<section>
-		<p class="btn">
-			<button id="btn01">이미지 가져오기</button>
-		</p>
-		<p class="box01">
-			<img src="images/pic1.jpg" alt="sample">
-		</p>
-		<p class="test">1</p>
-	</section>
+<section>
+<p class="btn">
+<button id="btn01">이미지 가져오기</button>
+</p>
+<p class="box01">
+	<img src="images/pic1.jpg" alt="sample"></p>
+<p class="test">1</p>
+</section>
 
-	<script>
-		$(function(){
-			i = 0;
-			$('btn').click(function(){
-				i++;
-				switch(i){
-					case 2: $('.box01>img').attr('src', `images/pic2.jpg`); break;
-				}
-			});
-		});
-	</script>
 </body>
-
 </html>
+
+
+
+
+
+
+
+
+
+
