--- a/jquery/03dom/dom_07.html
+++ b/jquery/03dom/dom_07.html
@@ -1,23 +1,54 @@
 ﻿<!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>HTML삽입 및 변화</title>
+  <meta charset="UTF-8">
+  <title>HTML삽입 및 변화</title>
 
-<style>
-section{width:800px; margin:20px auto; padding:20px;}
-p#first{widht:750px; padding:20px; border:3px solid #333;  background:yellow;}
-ins,strong{color:red;  display:block;}
-p.last{text-align:right;}
-</style>
+  <style>
+    section {
+      width: 800px;
+      margin: 20px auto;
+      padding: 20px;
+    }
 
+    p#first {
+      width: 750px;
+      padding: 20px;
+      border: 3px solid #333;
+      background: yellow;
+    }
+
+    ins,
+    strong {
+      color: red;
+      display: block;
+    }
+
+    p.last {
+      text-align: right;
+    }
+  </style>
+  <script src="../js/jquery-3.6.0.min.js"></script>
 </head>
+
 <body>
-<section>
-<button id="btn01">버튼</button>
-<p id="first"> 
-본문의 내용입니다.
-</p>
-</section>
+  <section>
+    <button id="btn01">버튼</button>
+    <p id="first">
+      본문의 내용입니다.
+    </p>
+    <script>
+      $(function () {
+        $('#btn01').click(function (e) {
+          $('p#first').before('<h1>제목</h1>')
+            .prepend('<em>추가된 내용</em>')
+            .append('<strong>참조바람</strong>')
+            .after('<p clas="last">end</p>');
+        })
+      });
+    </script>
+  </section>
 </body>
+
 </html>
