--- a/jquery/03dom/dom_08.html
+++ b/jquery/03dom/dom_08.html
@@ -7,15 +7,28 @@
 p{width:500px; border:3px solid #960;
 	padding:10px; text-align:center;}
 </style>	
-
+<script src="../js/jquery-3.6.0.min.js"></script>
 
 </head>
 <body>
 <div>
+
 <button id="btn01">버튼</button>
+
 <p> 본문텍스트 입니다.</p>
+
 <strong> 앞으로 이동</strong>
 <em> 뒤로 이동</em>
 </div>
+
+<!--  1. 추가 2. 이동 -> 형식 (선택자) -->
+<script>
+  $(function(){
+		$('#btn01').click(function(e){
+			$('strong').insertBefore('p');
+			$('em').appendTo('p');
+		});
+	});
+</script>
 </body>
 </html>
