--- a/jquery/03dom/dom_09.html
+++ b/jquery/03dom/dom_09.html
@@ -1,37 +1,102 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>sample</title>
+  <meta charset="utf-8">
+  <title>sample</title>
 
-<style>
-*{margin:0; padding:0;}
-ul,li{list-style:none;}
-#box{background:#000;width:768px; padding:10px; margin:30px auto 0;}
-ul{overflow:hidden; margin-bottom:50px;}
-li{float:left; padding:10px; border:1px solid #fff;margin:0 10px;
-background:#CC9;}
-img{vertical-align:top;}
-p{text-align:center; margin-bottom:20px;}
-button{padding:10px 0;width:200px;  background:#069; color:#fff; font-size:1.3em; font-weright:900;
-			border:0;margin:0 20px;}
-</style>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
 
+    ul,
+    li {
+      list-style: none;
+    }
+
+    #box {
+      background: #000;
+      width: 768px;
+      padding: 10px;
+      margin: 30px auto 0;
+    }
+
+    ul {
+      overflow: hidden;
+      margin-bottom: 50px;
+    }
+
+    li {
+      float: left;
+      padding: 10px;
+      border: 1px solid #fff;
+      margin: 0 10px;
+      background: #CC9;
+    }
+
+    img {
+      vertical-align: top;
+    }
+
+    p {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    button {
+      padding: 10px 0;
+      width: 200px;
+      background: #069;
+      color: #fff;
+      font-size: 1.3em;
+      font-weight: 900;
+      border: 0;
+      margin: 0 20px;
+    }
+  </style>
+  <script src="../js/jquery-3.6.0.min.js"></script>
 
 </head>
+
 <body>
 
-<div id="box">
-<ul>
-<li><img src="images/pic1.jpg" alt="이미지01"></li>
-<li><img src="images/pic2.jpg" alt="이미지02"></li>
-<li><img src="images/pic3.jpg" alt="이미지03"></li>
-<li><img src="images/pic4.jpg" alt="이미지04"></li>
-</ul>
-<p>
-<button id="prev">앞으로</button>
-<button id="next">뒤로</button>
-</p>
-</div>
+  <div id="box">
+    <ul>
+      <li><img src="images/pic1.jpg" alt="이미지01"></li>
+      <li><img src="images/pic2.jpg" alt="이미지02"></li>
+      <li><img src="images/pic3.jpg" alt="이미지03"></li>
+      <li><img src="images/pic4.jpg" alt="이미지04"></li>
+    </ul>
+    <p>
+      <button id="prev">앞으로</button>
+      <button id="next">뒤로</button>
+    </p>
+  </div>
+  <script>
+    $(function () {
+      let sWidth = 190;//li가로 크기
+      let num = 4;//li숫자
+      for (var t of $('ul>li')) {
+        var temp = $(t).clone().appendTo('ul');
+      }
+      
+      $('ul').css('position', 'relative');
+
+      for (let i = 1; i <= num; i++) {
+        $( `ul>li:gt(${2+i})`).css({
+          position: 'absolute',
+          right: `-${sWidth * i}px`,
+        });
+      }
+
+      $('#prev').on('click', function(){
+          
+      });
+
+    });
+  </script>
 </body>
+
 </html>
