--- a/jquery/03dom/dom_11.html
+++ b/jquery/03dom/dom_11.html
@@ -9,7 +9,7 @@ cursor:pointer; }
 .blue { color:blue; }
 .highlight { background:yellow; }
 </style>
-
+<script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <button id="btn01">버튼</button>
@@ -17,5 +17,13 @@ cursor:pointer; }
 <p class="blue highlight">highlight</p>
 <p class="blue">on these</p>
 <p class="blue">paragraphs</p>
+<script>
+  $(function(){
+    $('p').click(function(e){
+      // 내가 클릭한 p요소
+      $(this).toggleClass('highlight');
+    });
+  });
+</script>
 </body>
 </html>
