--- a/jquery/03dom/dom_12.html
+++ b/jquery/03dom/dom_12.html
@@ -7,7 +7,7 @@
 <style>
 p{width:500px; padding:10px; margin:20px; border:3px solid #36F;}
 </style>
-
+<script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <p>
@@ -22,5 +22,23 @@ p{width:500px; padding:10px; margin:20px; border:3px solid #36F;}
 <em>나만 틀려요</em>
 <strong> 텍스트텍스트</strong>
 </div>
+<script>
+  $(function(){
+    $('#btn01').click(function(e){
+      // $('strong').wrap('<p></p>');
+      $('strong').wrap('<p>')
+    });
+    $('#btn02').click(function(e){
+        $('strong').wrapAll('<p>');
+    });
+    $('#btn03').click(function(e){
+      $('div').wrapInner('<p>');
+    });
+    $('#btn04').click(function(e){
+      $('strong').unwrap();
+    });
+  });
+</script>
+
 </body>
 </html>
