--- a/jquery/03dom/dom_13.html
+++ b/jquery/03dom/dom_13.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>바꾸기</title>
-
+<script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <button id="btn01">replace</button>
@@ -19,5 +19,32 @@
 <p class="no05">채우기 </p>
 <p class="no06">복제하기</p>
 <p class="no07">자르기</p>
+<script>
+  $(function(){
+    $('#btn01').click(function(e){
+      $('p.no01').replaceWith('<h1>welcome</h1>');
+    });
+    $('#btn02').click(function(e){
+      $('p.no02').html('<strong>변경</strong>');
+    });
+    $('#btn03').click(function(e){
+      $('p.no03').remove();
+    });
+    $('#btn04').click(function(e){
+      $('p.no04').empty();
+    });
+    $('#btn05').click(function(e){
+      let box = $('p.no05').clone();
+      console.log(box);
+      $('p.no07').prepend(box);
+    });
+    $('#btn06').click(function(e){
+      let box = $('p.no06').detach();
+      console.log(box);
+      $('p.no07').append(box);
+    });
+  });
+  // 33-> 38 시작
+</script>
 </body>
 </html>
