--- a/jquery/04mouseEvent/event_02.html
+++ b/jquery/04mouseEvent/event_02.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>event:this사용하기</title>
-
+<script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <ul id="btn">
@@ -13,5 +13,16 @@
 <li><a id="btn04" href="img/house_04.jpg">주택4</a></li>
 </ul>
 <p><img id="back_img" src="img/house_05.jpg" alt="주택5" /></p>
+<script>
+  $(function(){
+    $('li>a').click(function(e){
+      // this, attr, a이용
+      let pic = $(this).attr('href');
+      $('p>img').attr('src',pic);
+      //
+      return false;
+    });
+  });
+</script>
 </body>
 </html>
