--- a/jquery/04mouseEvent/event_04.html
+++ b/jquery/04mouseEvent/event_04.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>event:더블클릭, mouseDown,MouseUp</title>
-
+<script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <ul id="list_btn">
@@ -13,5 +13,19 @@
 <li><a href="img/room_04.jpg">room04</a></li>
 </ul>
 <p id="back_pic"><img src="img/room_05.jpg" alt="room05" /></p>
+<script>
+  $(function(){
+    // $('li>a').dblclick().click()
+    // $('li>a').mousedown().click()
+    // $('li>a').mouseup().click()
+
+    $('li>a').dblclick(function(e){
+      let pic = $(this).attr('href');
+      $('p>img').attr('src',pic);
+    }).click(function(e){
+      return false;
+    });
+  });
+</script>
 </body>
 </html> 
