--- a/jquery/05effect/effect0_basic01.html
+++ b/jquery/05effect/effect0_basic01.html
@@ -1,53 +1,118 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>effect기본매서드 외우기</title>
-<style>
-p{margin:0; padding:0;}
-div{width:800px; height:70px; margin:0 auto 25px; overflow:hidden;}
-p:first-child{width:300px; height:70px; float:left; background:#333;
-text-align:center; line-height:70px; font-size:1.2em; color:#fff;}
-p:last-child{width:480px; height:66px; background:#099; float:right; }
-</style>
+  <meta charset="UTF-8">
+  <title>effect기본매서드 외우기</title>
+  <style>
+    p {
+      margin: 0;
+      padding: 0;
+    }
+
+    div {
+      width: 800px;
+      height: 70px;
+      margin: 0 auto 25px;
+      overflow: hidden;
+    }
+
+    p:first-child {
+      width: 300px;
+      height: 70px;
+      float: left;
+      background: #333;
+      text-align: center;
+      line-height: 70px;
+      font-size: 1.2em;
+      color: #fff;
+    }
+
+    p:last-child {
+      width: 480px;
+      height: 66px;
+      background: #099;
+      float: right;
+    }
+  </style>
+  <script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
 
-<div id="effect01">
-<p class="button">
-<button class="btn01">show</button>
-<button class="btn02">hide</button>
-<button class="btn03">toggel</button>
-</p>
-<p class="back01"></p>
-</div>
+  <div id="effect01">
+    <p class="button">
+      <button class="btn01">show</button>
+      <button class="btn02">hide</button>
+      <button class="btn03">toggel</button>
+    </p>
+    <p class="back01"></p>
+  </div>
 
-<div id="effect02">
-<p class="button">
-<button class="btn01">slideUp</button>
-<button class="btn02">slideDown</button>
-<button class="btn03">slideToggel</button>
-</p>
-<p class="back02"></p>
-</div>
+  <div id="effect02">
+    <p class="button">
+      <button class="btn01">slideUp</button>
+      <button class="btn02">slideDown</button>
+      <button class="btn03">slideToggel</button>
+    </p>
+    <p class="back02"></p>
+  </div>
 
-<div id="effect03">
-<p class="button">
-<button class="btn01">fadeIn</button>
-<button class="btn02">fadeOut</button>
-</p>
-<p class="back03"></p>
-</div>
+  <div id="effect03">
+    <p class="button">
+      <button class="btn01">fadeIn</button>
+      <button class="btn02">fadeOut</button>
+    </p>
+    <p class="back03"></p>
+  </div>
 
-<div id="effect04">
-<p class="button">
-<button class="btn01">fadeTo</button>
-<button class="btn02">fadeToggel</button>
-</p>
-<p class="back04"></p>
-</div>
+  <div id="effect04">
+    <p class="button">
+      <button class="btn01">fadeTo</button>
+      <button class="btn02">fadeToggel</button>
+    </p>
+    <p class="back04"></p>
+  </div>
+  <!--  -->
+  <script>
+    $(function () {
+      // show군단
+      $('#effect01 .btn01').on('click', function (e) {
+        $(this).parent().siblings().show(500);
+        // $('#effect01 p.back01').hide(500);
+      });
+      $('#effect01 .btn02').on('click', function (e) {
+        $(this).parent().siblings().hide(500);
+      });
+      $('#effect01 .btn03').on('click', function (e) {
+        $(this).parent().siblings().toggle(500);
+      });
+      // slide군단
+      $('#effect02 .btn01').on('click', function (e) {
+        $(this).parent().siblings().slideUp(500);
+      });
+      $('#effect02 .btn02').on('click', function (e) {
+        $(this).parent().siblings().slideDown(500);
+      });
+      $('#effect02 .btn03').on('click', function (e) {
+        $(this).parent().siblings().slideToggle(500);
+      });
+      // fade군단
+      $('#effect03 .btn01').on('click', function (e) {
+        $(this).parent().siblings().fadeIn(500);
+      });
+      $('#effect03 .btn02').on('click', function (e) {
+        $(this).parent().siblings().fadeOut(500);
+      });
 
+      $('#effect04 .btn01').on('click', function (e) {
+        $(this).parent().siblings().fadeTo(500, 0.5);
+      });
+      $('#effect04 .btn02').on('click', function (e) {
+        $(this).parent().siblings().fadeToggle(500);
+      });
+    });
+  </script>
 
 
 
@@ -60,4 +125,5 @@ p:last-child{width:480px; height:66px; background:#099; float:right; }
 
 
 </body>
+
 </html>
