--- a/jquery/05effect/effect_02.html
+++ b/jquery/05effect/effect_02.html
@@ -12,13 +12,23 @@ background:red;
 display:none;
 }
 </style>
+<script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 	<button id="show">표시</button>
 	<button id="hide">비표시</button>
 	<div id="back_01">some forms of augmented reality can now be used in our daily lives 2.contact lenses that give GPS directions have not been created yet 3.augmented reality might be used as a tool for exposing an individual`s information.some forms of augmented reality can now be used in our daily lives 2.contact lenses that give GPS directions have not been created yet 3.augmented reality might be used as a tool for exposing an individual`s information.</div>
 	<p></p>
- 
+ <script>
+	 $(function(){
+		 $('#show').on('click',function(e){
+			$('#back_01:not(:animated)').slideDown(3000);
+		 });
+		 $('#hide').on('click',function(e){
+			$('#back_01:not(:animated)').slideUp(3000);
+		 });
+	 });
+ </script>
     
 </body>
 </html>
