--- a/jquery/03dom/dom_11.html
+++ b/jquery/03dom/dom_11.html
@@ -1,29 +1,42 @@
 <html>
-<head>
-<meta charset="UTF-8">
 
-<title>this와 토글</title>
-<style>
-p { margin: 4px; font-size:16px; font-weight:bolder;
-cursor:pointer; }
-.blue { color:blue; }
-.highlight { background:yellow; }
-</style>
-<script src="../js/jquery-3.6.0.min.js"></script>
+<head>
+    <meta charset="UTF-8">
+
+    <title>this와 토글</title>
+    <style>
+        p {
+            margin: 4px;
+            font-size: 16px;
+            font-weight: bolder;
+            cursor: pointer;
+        }
+        
+        .blue {
+            color: blue;
+        }
+        
+        .highlight {
+            background: yellow;
+        }
+    </style>
+    <script src="../js/jquery-3.6.0.min.js"></script>
 </head>
+
 <body>
-<button id="btn01">버튼</button>
-<p class="blue">Click to toggle</p>
-<p class="blue highlight">highlight</p>
-<p class="blue">on these</p>
-<p class="blue">paragraphs</p>
-<script>
-  $(function(){
-    $('p').click(function(e){
-      // 내가 클릭한 p요소
-      $(this).toggleClass('highlight');
-    });
-  });
-</script>
+    <button id="btn01">버튼</button>
+    <p class="blue">Click to toggle</p>
+    <p class="blue highlight">highlight</p>
+    <p class="blue">on these</p>
+    <p class="blue">paragraphs</p>
+    <script>
+        $(function() {
+            $('p').click(function(e) {
+                // 내가 클릭한 p요소
+                $(this).toggleClass('highlight');
+            });
+        });
+    </script>
 </body>
+
 </html>
