--- a/jquery/03dom/dom_13.html
+++ b/jquery/03dom/dom_13.html
@@ -1,50 +1,53 @@
 ﻿<!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>바꾸기</title>
-<script src="../js/jquery-3.6.0.min.js"></script>
+    <meta charset="UTF-8">
+    <title>바꾸기</title>
+    <script src="../js/jquery-3.6.0.min.js"></script>
 </head>
+
 <body>
-<button id="btn01">replace</button>
-<button id="btn02">html</button>
-<button id="btn03">remove</button>
-<button id="btn04">empty</button>
-<button id="btn05">clone</button>
-<button id="btn06">detach</button>
-<p class="no01">요소바꾸기바꾸어 주세요. </p>
-<p class="no02">콘텐츠바꾸기바꾸어 주세요. </p>
-<p class="no03">없애기</p>
-<p class="no04">비우기 </p>
-<p class="no05">채우기 </p>
-<p class="no06">복제하기</p>
-<p class="no07">자르기</p>
-<script>
-  $(function(){
-    $('#btn01').click(function(e){
-      $('p.no01').replaceWith('<h1>welcome</h1>');
-    });
-    $('#btn02').click(function(e){
-      $('p.no02').html('<strong>변경</strong>');
-    });
-    $('#btn03').click(function(e){
-      $('p.no03').remove();
-    });
-    $('#btn04').click(function(e){
-      $('p.no04').empty();
-    });
-    $('#btn05').click(function(e){
-      let box = $('p.no05').clone();
-      console.log(box);
-      $('p.no07').prepend(box);
-    });
-    $('#btn06').click(function(e){
-      let box = $('p.no06').detach();
-      console.log(box);
-      $('p.no07').append(box);
-    });
-  });
-  // 33-> 38 시작
-</script>
+    <button id="btn01">replace</button>
+    <button id="btn02">html</button>
+    <button id="btn03">remove</button>
+    <button id="btn04">empty</button>
+    <button id="btn05">clone</button>
+    <button id="btn06">detach</button>
+    <p class="no01">요소바꾸기바꾸어 주세요. </p>
+    <p class="no02">콘텐츠바꾸기바꾸어 주세요. </p>
+    <p class="no03">없애기</p>
+    <p class="no04">비우기 </p>
+    <p class="no05">채우기 </p>
+    <p class="no06">복제하기</p>
+    <p class="no07">자르기</p>
+    <script>
+        $(function() {
+            $('#btn01').click(function(e) {
+                $('p.no01').replaceWith('<h1>welcome</h1>');
+            });
+            $('#btn02').click(function(e) {
+                $('p.no02').html('<strong>변경</strong>');
+            });
+            $('#btn03').click(function(e) {
+                $('p.no03').remove(); //선택자 자체를 없애줌
+            });
+            $('#btn04').click(function(e) {
+                $('p.no04').empty(); //선택자 안에 있는 내용만 없애줌
+            });
+            $('#btn05').click(function(e) {
+                let box = $('p.no05').clone();
+                console.log(box);
+                $('p.no07').prepend(box);
+            });
+            $('#btn06').click(function(e) {
+                let box = $('p.no06').detach();
+                console.log(box);
+                $('p.no07').append(box);
+            });
+        });
+        // 33-> 38 시작
+    </script>
 </body>
+
 </html>
