--- a/jquery/05effect/effect_03.html
+++ b/jquery/05effect/effect_03.html
@@ -1,19 +1,33 @@
 ﻿<!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>easing 사용하기</title>
-<style type="text/css">
-div{
-width:300px;
-height:300px;
-background:red;
-display:none;
-}
-</style>
+    <meta charset="UTF-8">
+    <title>easing 사용하기</title>
+    <style type="text/css">
+        div {
+            width: 300px;
+            height: 300px;
+            background: red;
+            display: none;
+        }
+    </style>
+
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/jquery-ui.min.js"></script>
 </head>
+
 <body>
-	<button id="btnAll">표시・비표시</button>
-	<div id="backImg"></div>
+    <button id="btnAll">표시・비표시</button>
+    <div id="backImg"></div>
+
+    <script>
+        $(function() {
+            $('#btnAll').on('click', function(e) {
+                $('div#backImg').slideToggle(1000, 'easeInOutBounce');
+            });
+        });
+    </script>
 </body>
+
 </html>
