--- a/jquery/05effect/effect_04.html
+++ b/jquery/05effect/effect_04.html
@@ -1,30 +1,49 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>좌표값으로 애니메이션</title>
-<style>
-p{width:150px; height:150px; background:red;
-	position:absolute; top:100px; left:100px;}
-</style>
 
-</head> 
+<head>
+    <meta charset="utf-8">
+    <title>좌표값으로 애니메이션</title>
+    <style>
+        p {
+            width: 150px;
+            height: 150px;
+            background: red;
+            position: absolute;
+            top: 100px;
+            left: 100px;
+        }
+    </style>
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/jquery-ui.min.js"></script>
+</head>
 
 <body>
-<button id="btn">go</button>
-<button id="btn01">300go</button>
-<!-- <button id="btn02">color</button> -->
-<p></p>
+    <button id="btn">go</button>
+    <button id="btn01">300go</button>
+    <button id="btn02">color</button>
+    <p></p>
 
+    <script>
+        $(function() {
+            $('#btn').on('click', function() {
+                $('p').animate({
+                    left: '500px'
+                }, 1000);
+            });
 
+            $('#btn01').on('click', function() {
+                $('p').animate({
+                    left: '+=300px'
+                }, 1000);
+            });
+            $('#btn02').on('click', function(e) {
+                $('p').animate({
+                    backgroundColor: 'yellow'
+                });
+            });
+        })
+    </script>
 </body>
+
 </html>
-
-
-
-
-
-
-
-
-
