--- a/jquery/07gallerybasic/gallery01.html
+++ b/jquery/07gallerybasic/gallery01.html
@@ -1,24 +1,69 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>modal</title>
-<link href="css1/reset.css" rel="stylesheet">
-<link href="css1/modal.css" rel="stylesheet">
-
+    <meta charset="UTF-8">
+    <title>modal</title>
+    <link href="css1/reset.css" rel="stylesheet">
+    <link href="css1/modal.css" rel="stylesheet">
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/jquery-ui.min.js"></script>
 </head>
-<body>
-<ul>
-<li><a href="img/img_01.jpg" class="modal"><img src="img/img_01.jpg" width="140" height="105" ></a></li>
-<li><a href="img/img_02.jpg" class="modal"><img src="img/img_02.jpg" width="140" height="105"></a></li>
-<li><a href="img/img_03.jpg" class="modal"><img src="img/img_03.jpg" width="140" height="105"></a></li>
-<li><a href="img/img_09.jpg" class="modal"><img src="img/img_09.jpg" width="140" height="105"></a></li>
-<li><a href="img/img_05.jpg" class="modal"><img src="img/img_05.jpg" width="140" height="105"></a></li>
-<li><a href="img/img_06.jpg" class="modal"><img src="img/img_06.jpg" width="140" height="105"></a></li>
-<li><a href="img/img_07.jpg" class="modal"><img src="img/img_07.jpg" width="140" height="105"></a></li>
-<li><a href="img/img_08.jpg" class="modal"><img src="img/img_08.jpg" width="140" height="105"></a></li>
-</ul>
-<p id="test"></p>
 
+<body>
+    <ul>
+        <li>
+            <a href="img/img_01.jpg" class="modal"><img src="img/img_01.jpg" width="140" height="105"></a>
+        </li>
+        <li>
+            <a href="img/img_02.jpg" class="modal"><img src="img/img_02.jpg" width="140" height="105"></a>
+        </li>
+        <li>
+            <a href="img/img_03.jpg" class="modal"><img src="img/img_03.jpg" width="140" height="105"></a>
+        </li>
+        <li>
+            <a href="img/img_09.jpg" class="modal"><img src="img/img_09.jpg" width="140" height="105"></a>
+        </li>
+        <li>
+            <a href="img/img_05.jpg" class="modal"><img src="img/img_05.jpg" width="140" height="105"></a>
+        </li>
+        <li>
+            <a href="img/img_06.jpg" class="modal"><img src="img/img_06.jpg" width="140" height="105"></a>
+        </li>
+        <li>
+            <a href="img/img_07.jpg" class="modal"><img src="img/img_07.jpg" width="140" height="105"></a>
+        </li>
+        <li>
+            <a href="img/img_08.jpg" class="modal"><img src="img/img_08.jpg" width="140" height="105"></a>
+        </li>
+    </ul>
+    <p id="test"></p>
+    <script>
+        $(function() {
+            $('body').append('<div id="back"</div><div id="main"></div>')
+            $('li>a').on('click', function() {
+                let pic = $(this).attr('href');
+                $('#back').show();
+                $('#main').show().html('<img src="' + pic + '" alt="응애">');
+
+                //tranfrom: tranlate(-50%, -50%) 써도 되는데 단점이 나중에 뭐 추가하면 2배로 커진다고 함 그냥 밑에 있는거 쓰는게 좋을듯
+                let mLeft = $('#main').width() / 2;
+                let mTop = $('#main').height() / 2;
+                console.log(mLeft, mTop);
+
+                $('#main').css({
+                    marginLeft: '-' + mLeft + 'px',
+                    marginTop: '-' + mTop + 'px'
+                });
+                return false;
+            })
+
+            $('#back').on('click', function() {
+                $(this).hide();
+                $('#main').hide();
+            });
+        });
+    </script>
 </body>
+
 </html>
