--- a/jquery/07gallerybasic/gallery02.html
+++ b/jquery/07gallerybasic/gallery02.html
@@ -1,29 +1,82 @@
-
 <!doctype html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>gallery_slide</title>
-<link href="css1/reset.css" rel="stylesheet">
-<link href="css1/gallery.css" rel="stylesheet">
 
+<head>
+    <meta charset="UTF-8">
+    <title>gallery_slide</title>
+    <link href="css1/reset.css" rel="stylesheet">
+    <link href="css1/gallery.css" rel="stylesheet">
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/jquery-ui.min.js"></script>
 </head>
 
 <body>
-<section>
-<h1>Slide Gallery</h1>
+    <section>
+        <h1>Slide Gallery</h1>
         <p id="prev"><img src="img/prev.png" alt="앞으로"></p>
         <p id="next"><img src="img/next.png" alt="뒤로"></p>
-<div id="view">
-        <ul id="source">
-        <li><img src="img/pic01.jpg" alt="화보1"></li>
-        <li><img src="img/pic02.jpg" alt="화보3"></li>
-        <li><img src="img/pic03.jpg" alt="화보4"></li>
-        <li><img src="img/pic04.jpg" alt="화보5"></li>
-        <li><img src="img/pic05.jpg" alt="화보6"></li>
-        </ul>
-</div>
-</section>
+        <div id="view">
+            <ul id="source">
+                <li><img src="img/pic01.jpg" alt="화보1"></li>
+                <li><img src="img/pic02.jpg" alt="화보3"></li>
+                <li><img src="img/pic03.jpg" alt="화보4"></li>
+                <li><img src="img/pic04.jpg" alt="화보5"></li>
+                <li><img src="img/pic05.jpg" alt="화보6"></li>
+            </ul>
+        </div>
+    </section>
 
+
+    <script>
+        $(function() {
+            $('#source>li:last').prependTo('#source');
+            $('#source').css('marginLeft', '-400px');
+
+            $('#prev').on('click', function() {
+                $('#next, #prev').hide();
+                $('#source').animate({
+                    marginLeft: '-=400px'
+                }, 500, function() {
+                    $('#source>li:first').appendTo('ul');
+                    $('#source').css('margin-left', '-400px');
+                    $('#next, #prev').show();
+                });
+            });
+
+            $('#next').on('click', function() {
+                $('#next, #prev').hide();
+                $('#source').animate({
+                    marginLeft: '+=400px'
+                }, 500, function() {
+                    $('ul>li:last').prependTo('ul');
+                    $('#source').css('margin-left', '-400px');
+                    $('#next, #prev').show();
+                });
+            });
+
+            //타이머
+            function ani() {
+                $('#next, #prev').hide();
+                $('#source').animate({
+                    marginLeft: '-=400px'
+                }, 500, function() {
+                    $('#source>li:first').appendTo('ul');
+                    $('#source').css('margin-left', '-400px');
+                    $('#next, #prev').show();
+                });
+            }
+            ani();
+            str = setInterval(ani, 3000);
+
+            //마우스
+            $('#view').on('mouseenter', function() {
+                clearInterval(str);
+            });
+            $('#view').on('mouseleave', function() {
+                setInterval(ani, 3000);
+            })
+        });
+    </script>
 </body>
+
 </html>
