--- a/jquery/09form/form02.html
+++ b/jquery/09form/form02.html
@@ -1,16 +1,26 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>val</title>
 
+<head>
+    <meta charset="UTF-8">
+    <title>val</title>
+    <script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
 
-<p> <input type="text" name="user"></p>
+    <p> <input type="text" name="user" value="초기값" placeholder="탑"></p>
+    <p><textarea cols="30" rows="10"></textarea></p>
+    <button>Set the value of the input field</button>
 
-<button>Set the value of the input field</button>
-    
+    <script>
+        $(function() {
+            $('button').on('click', function() {
+                $('input').val('welcome');
+                $('textarea').attr('placeholder', '설명글');
+            });
+        });
+    </script>
 </body>
+
 </html>
