--- a/CSS/lesson02/index.html
+++ b/CSS/lesson02/index.html
@@ -21,13 +21,14 @@
                 <nav>
                     <h2 class="hide">메인내비게이션</h2>
                     <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Content</a></li>
+                        <li><a href="#box02">About</a></li>
+                        <li><a href="#box03">Portfolio</a></li>
+                        <li><a href="#box04">Content</a></li>
                     </ul>
-                    <!-- <p class="close">
-                        close
-                    </p> -->
+                    <p class="close">
+                        <span></span>
+                        <span></span>
+                    </p>
                 </nav>
                 <!-- nav btn -->
                 <p id="btn">
@@ -160,8 +161,8 @@
                         </figure>
                     </div>
                 </div>
-                <div class="left">left</div>
-                <div class="right">right</div>
+                <div class="left">〈</div>
+                <div class="right">〉</div>
                 <!-- <aside id="modal"></aside> -->
             </article>
         </div>
